--- a/gmao/templates/gmao/liste_appareils_distributeurs.html
+++ b/gmao/templates/gmao/liste_appareils_distributeurs.html
@@ -122,6 +122,7 @@
                         }
                     }
                 ],
+                sort: false,
                 "language": {
                     "url": "//cdn.datatables.net/plug-ins/1.10.24/i18n/French.json"
                 }
