--- a/gmao/templates/gmao/home.html
+++ b/gmao/templates/gmao/home.html
@@ -60,9 +60,11 @@
                         {% for equipe in equipes_data %}
                             <div class="col-md-4 mb-4">
                                 <div class="card h-100" style="width: 90%;">
-                                    <div class="card-header bg-primary text-white">
-                                        <h5 class="card-title mb-0">{{ equipe.nom }}</h5>
-                                    </div>
+                                    <a href="/equipes/gestion-equipes">
+                                        <div class="card-header bg-primary text-white">
+                                            <h5 class="card-title mb-0">{{ equipe.nom }}</h5>
+                                        </div>
+                                    </a>
                                     <div class="card-body">
                                         <p class="card-text">{{ equipe.description }}</p>
                                         <h6 class="mt-3">Techniciens :</h6>
