--- a/templates/base.html
+++ b/templates/base.html
@@ -28,14 +28,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/themes/dark.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     {% block extra_css %}{% endblock extra_css %}
-    <title>MEI&nbsp;| {% block title %}G M A O {% endblock title %}</title>
+    <title>{% block title %}G M A O {% endblock title %}</title>
 </head>
 <body>
 <div class="wrapper">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'gmao:home' %}">MEI</a>
+        <a class="navbar-brand" href="{% url 'gmao:home' %}">Acceuil</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -103,8 +103,8 @@
     <footer class="bg-dark text-center text-lg-start" id="footer">
         <div class="text-center p-1" style="background-color: rgba(0,0,0,0.2);">
             Copyright: &copy; {% now "Y" %} Allright reserved | Made with
-            <i class="text-danger fas fa-bolt" style="font-size: 15px;"></i> by
-            <a href="#" target="_blank" style="color: #0dcaf0; text-decoration: none;">mei</a>
+            <i class="text-danger fas fa-bolt" style="font-size: 15px;"></i> <!--by
+            <a href="#" target="_blank" style="color: #0dcaf0; text-decoration: none;">mei</a> -->
         </div>
     </footer>
 </div>
@@ -147,7 +147,7 @@
                     day: 'numeric',
                     hour: '2-digit',
                     minute: '2-digit',
-                    second: '2-digit'
+                    second: '2-digit',
                 };
                 document.getElementById('current-time').textContent = now.toLocaleDateString('fr-FR', options);
             }
