--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -11,7 +11,7 @@
     <div class="login-container">
         <div class="login-box">
             <div class="logo">
-                <img src="{% static 'accounts/img/logo_mei.png' %}" alt="Mei Logo">
+                <img src="{% static 'accounts/img/logo.png' %}" alt="Mei Logo">
             </div>
             <h2>Connexion</h2>
             <form method="post" class="login-form">
