--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEI&nbsp;| Log in</title>
+    <title>i2e&nbsp;| Log in</title>
     <!-- Inclusion de Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Votre CSS personnalisé -->
@@ -17,7 +17,7 @@
             <div class="card">
                 <div class="card-body">
                     <div class="text-center mb-4">
-                        <img src="{% static 'accounts/img/logo_mei.png' %}" alt="Mei Logo" class="img-fluid">
+                        <img src="{% static 'accounts/img/logo.png' %}" alt="Mei Logo" class="img-fluid">
                     </div>
 
                     <h2 class="card-title text-center mb-4">Connexion</h2>
